--- a/AnimePortal/AnimePortal/LoginPage.xaml
+++ b/AnimePortal/AnimePortal/LoginPage.xaml
@@ -1,14 +1,15 @@
-﻿<Window x:Class="AnimePortal.LoginWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AnimePortal"
-        mc:Ignorable="d"
-        WindowStartupLocation="CenterOwner"
-        ResizeMode="NoResize"
-        Title="Вход в систему" Height="180" Width="350">
-    <Grid>
+﻿<Page x:Class="AnimePortal.LoginPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:AnimePortal"
+      mc:Ignorable="d" 
+      d:DesignHeight="500" d:DesignWidth="600"
+      Title="Вход в систему"
+      Background="White">
+
+    <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
@@ -20,14 +21,14 @@
         </Grid.ColumnDefinitions>
 
         <Label VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="16" Margin="10 0">Введите логин:</Label>
-        <TextBox Name="txtLogin" Grid.Column="1" VerticalAlignment="Center" FontSize="16" Margin="0 0 20 0" TextChanged="textChanged"></TextBox>
+        <TextBox Name="txtLogin" Grid.Column="1" VerticalAlignment="Center" FontSize="16" Margin="10" Width="150" TextChanged="textChanged"></TextBox>
 
         <Label Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="16" Margin="10 0">Введите пароль:</Label>
-        <PasswordBox Name="txtPassword" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" FontSize="16" Margin="0 0 20 0" PasswordChanged="textChanged"></PasswordBox>
+        <PasswordBox Name="txtPassword" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" FontSize="16" Margin="10" Width="150" PasswordChanged="textChanged"></PasswordBox>
 
-        <StackPanel Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Center" Orientation="Horizontal">
+        <StackPanel Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Center" Orientation="Horizontal" Margin="10">
             <Button Name="btnEnter" Grid.Row="2" Grid.ColumnSpan="2" IsEnabled="False" Background="LightBlue" VerticalAlignment="Center" FontSize="17" Width="100" Padding="2" Margin="5 0" Click="btnEnter_Click">Войти</Button>
             <Button Name="btnCancel" Grid.Row="2" Grid.ColumnSpan="2" Background="LightCoral" VerticalAlignment="Center" FontSize="17" Width="100" Padding="2" Margin="5 0" Click="btnCancel_Click">Отменить</Button>
         </StackPanel>
     </Grid>
-</Window>
+</Page>
