Итоговая фиксация (страничная навигация, CRUD, данные, дизайн)

--- a/AnimePortal/AnimePortal/AdminPage.xaml
+++ b/AnimePortal/AnimePortal/AdminPage.xaml
@@ -6,8 +6,8 @@
       xmlns:local="clr-namespace:AnimePortal"
       mc:Ignorable="d" 
       d:DesignHeight="500" d:DesignWidth="600"
-      Title="Админ-панель"
-      Background="White">
+      Loaded="Page_Loaded"
+      Title="Админ-панель">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -21,17 +21,17 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Label Grid.ColumnSpan="2" HorizontalContentAlignment="Center" VerticalAlignment="Center" FontSize="18">Добро пожаловать в админ-панель</Label>
+        <Label Grid.ColumnSpan="2" HorizontalContentAlignment="Center" FontWeight="Medium" VerticalAlignment="Center" FontSize="18">Добро пожаловать в админ-панель</Label>
         <Label Grid.Row="1" HorizontalContentAlignment="Center" VerticalAlignment="Center" FontSize="16">Все сериалы</Label>
         <Label Grid.Row="1" Grid.Column="1" HorizontalContentAlignment="Center" VerticalAlignment="Center" FontSize="16">Серии</Label>
 
-        <ListBox Name="serialList" DisplayMemberPath="Name" Grid.Row="2" BorderThickness="0" FontSize="15" Margin="20 10 10 10" SelectionChanged="serialList_SelectionChanged"/>
+        <ListBox Name="serialList" DisplayMemberPath="Name" Grid.Row="2" BorderThickness="0" FontSize="15" Margin="20 10 10 10" SelectionChanged="serialList_SelectionChanged" MouseDoubleClick="serialList_MouseDoubleClick"/>
 
-        <ListBox Name="episodeList" DisplayMemberPath="Name" Grid.Row="2" Grid.Column="1" BorderThickness="0" FontSize="15" Margin="10 10 20 10" SelectionChanged="episodeList_SelectionChanged"/>
+        <ListBox Name="episodeList" DisplayMemberPath="Name" Grid.Row="2" Grid.Column="1" BorderThickness="0" FontSize="15" Margin="10 10 20 10" SelectionChanged="episodeList_SelectionChanged" MouseDoubleClick="episodeList_MouseDoubleClick"/>
         <Label Background="White" Name="initialInfoLabel" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="16" Grid.Column="1" Grid.Row="2" Margin="10 10 20 10">
             Выберите сериал слева
         </Label>
-        <Label Name="infoLabel" Visibility="Hidden" VerticalContentAlignment="Center" Background="White" FontSize="16" Grid.Row="2" Grid.Column="1" Margin="10 10 20 10">
+        <Label Name="infoLabel" HorizontalAlignment="Center" Visibility="Hidden" VerticalContentAlignment="Center" Background="White" FontSize="16" Grid.Row="2" Grid.Column="1" Margin="10 10 20 10">
             <TextBlock TextWrapping="Wrap" TextAlignment="Center">
             У выбранного сериала нет эпизодов. Нажмите кнопку "Добавить" ниже.
             </TextBlock>
@@ -47,7 +47,6 @@
             <Button Name="btnDeleteEpisode" IsEnabled="False" FontSize="16" VerticalAlignment="Center" Padding="2" Width="100" Background="LightCoral" Margin="5 0" Click="btnDeleteEpisode_Click">Удалить</Button>
         </StackPanel>
 
-        <Button Grid.Row="4" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" Width="100" Background="LightBlue" FontSize="16" Padding="2" Click="btnGenres_Click">Жанры</Button>
         <Button Grid.Row="4" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Right" Width="100" Background="LightCoral" FontSize="16" Padding="2" Margin="10 0 20 0" Click="btnLogOut_Click">Выйти</Button>
     </Grid>
 </Page>
